test/localeModels/nspark/loc-in-locales.good
loc-in-locales.chpl:3: error: Cannot default-initialize a variable with generic type
loc-in-locales.chpl:3: note: 'not-fully-instantiated' has generic type 'channel'
